--- a/Homework5/MainWindow.xaml
+++ b/Homework5/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
                 <MenuItem x:Name="uxNewGame" Header="_New Game" Click="uxNewGame_Click"></MenuItem>
-                <MenuItem Header="E_xit"></MenuItem>
+                <MenuItem Header="E_xit" Click="uxExit_Click"></MenuItem>
             </MenuItem>
         </Menu>
 
